# egui_template

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/app/: mod.rs
